src/objects/CRM_WF_Beneficios__c.object
<CustomObject>
    <fields>
        <fullName>MX_WF_Regalo_boolean__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo para la aplicación WF, permite saber si la promoción incluye el beneficio de regalo</description>
        <label>Regalo</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Skip_Payment_boolean__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo para la aplicación WF, permite saber si la promoción incluye el beneficio de payment</description>
        <label>Skip Payment</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Tipo_de_carga__c</fullName>
        <description>Campo para la aplicación WF que permite conocer si la carga la hace adquirente o no</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo de carga</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Tipo_de_operacion__c</fullName>
        <description>Campo para la aplicación wf, define el tipo de operación que condiciona al beneficio</description>
        <label>Tipo de operación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revolvente</fullName>
                </value>
                <value>
                    <fullName>MSI</fullName>
                </value>
                <value>
                    <fullName>Revolvente / MSI</fullName>
                </value>
                <value>
                    <fullName>MCI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Tipo_de_transacci_n__c</fullName>
        <description>Campo para la aplicación WF, que permite informar el tipo de transacción (Revolvente o MSI) para que aplique la promoción</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo de transacción</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Valor_durante_la_promoci_n__c</fullName>
        <description>Campo para la aplicación WF, que permite conocer el valor de los puntos BBVA durante la promoción</description>
        <label>Valor durante la promoción</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_X2_Meses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF que permite saber si en el beneficio aplican 2 meses sin intereses</description>
        <label>2 Meses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_X4_Meses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF que permite saber si en el beneficio aplican 4 meses sin intereses</description>
        <label>4 Meses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_acumulaci_n_de_puntos_en_la_compra__c</fullName>
        <description>Campo para la aplicación WF, permite conocer el % de puntos que se acumulan por cada compra</description>
        <label>% de acumulación de puntos en la compra</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Beneficio</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>BN-{0000}</displayFormat>
        <label>Nombre de Beneficios</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beneficios</pluralLabel>
    <recordTypes>
        <fullName>CRM_WF_Beneficio</fullName>
        <active>true</active>
        <label>Beneficio</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>